# phlist

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
scripts/: probe_combine.py  probe_credits.py  probe_db.py  probe_fetch.py  probe_update.py
scripts/agent/: gen_assets.py  image_info.py  render_svg.py  resize_png.py
src/phlist/: __init__.py  fetcher.py  remote.py  server.py  updater.py
src/phlist/gui/: app.py  combine_tab.py  library_tab.py  settings_tab.py
src/piholecombinelist/: __init__.py  _install_desktop.py  combiner.py  database.py  deduplicator.py  fetcher.py  gui.py  logger.py  parser.py  server.py  updater.py
src/piholecombinelist/gui/: __init__.py  app.py  combine_tab.py  library_tab.py  settings_tab.py
tests/: test_combiner.py  test_database.py  test_deduplicator.py  test_fetcher.py  test_parser.py  test_remote.py  test_server.py  test_stress.py  test_updater.py
